# qrpc

./: .gitignore  CMakeLists.txt  README.md  qrpc-mobile.pri  qrpc-mobile.pro  qrpc-test.pro  qrpc.pri  qrpc.pro  version_1_0_0.txt
example/server-rest/: controllerMethods.cpp  controllerMethods.h  main.cpp  server-rest.pro  settings.json
includes/QRpc/: Client  Server
resource/: app.qrc  settings.debug.json  settings.release.json
src/: CMakeLists.txt  qrpc-base.pri  qrpc-client.pri  qrpc-interfaces.pri  qrpc-mobile.pri  qrpc-server.pri  qrpc-token.pri  qrpc.h  qrpc.qrc  qrpc_connection_setting.h  qrpc_const.h  qrpc_controller.cpp  qrpc_controller.h  qrpc_controller_notation.cpp  qrpc_controller_notation.h  qrpc_controller_options.cpp  qrpc_controller_options.h  qrpc_controller_router.cpp  qrpc_controller_router.h  qrpc_controller_setting.h  qrpc_global.h  qrpc_interface_check.cpp  qrpc_interface_check.h  qrpc_interface_maintence.cpp  qrpc_interface_maintence.h  qrpc_interface_maintence.h.orig  qrpc_interface_record.cpp  qrpc_interface_record.h  qrpc_last_error.cpp  qrpc_last_error.h  qrpc_listen.cpp  qrpc_listen.h  qrpc_listen_colletion.cpp  qrpc_listen_colletion.h  qrpc_listen_protocol.cpp  qrpc_listen_protocol.h  qrpc_listen_request.cpp  qrpc_listen_request.h  qrpc_listen_request_cache.cpp  qrpc_listen_request_cache.h  (+20 more)
src/private/: p_qrpc_amqp_handle.cpp  p_qrpc_amqp_handle.h  p_qrpc_amqp_pool.h  p_qrpc_amqp_thread.cpp  p_qrpc_amqp_thread.h  p_qrpc_amqp_thread_consumer.h  p_qrpc_amqp_thread_publish.h  p_qrpc_controller_options.cpp  p_qrpc_controller_options.h  p_qrpc_http_headers.cpp  p_qrpc_http_headers.h  p_qrpc_http_response.cpp  p_qrpc_http_response.h  p_qrpc_listen_broker_amqp.cpp  p_qrpc_listen_broker_amqp.h  p_qrpc_listen_broker_database.cpp  p_qrpc_listen_broker_database.h  p_qrpc_listen_broker_kafka.cpp  p_qrpc_listen_broker_kafka.h  p_qrpc_listen_broker_mqtt.cpp  p_qrpc_listen_broker_mqtt.h  p_qrpc_listen_http.cpp  p_qrpc_listen_http.h  p_qrpc_listen_http_p.cpp  p_qrpc_listen_http_p.h  p_qrpc_listen_local_socket.cpp  p_qrpc_listen_local_socket.h  p_qrpc_listen_qrpc.cpp  p_qrpc_listen_qrpc.h  p_qrpc_listen_qrpc_slot.cpp  p_qrpc_listen_qrpc_slot.h  p_qrpc_listen_request_code.cpp  p_qrpc_listen_request_code.h  p_qrpc_listen_tcp.cpp  p_qrpc_listen_tcp.h  p_qrpc_listen_udp.cpp  p_qrpc_listen_udp.h  p_qrpc_listen_wss.cpp  p_qrpc_listen_wss.h  p_qrpc_request.cpp  (+28 more)
test/: functional_test_request_broker_database.cpp  functional_test_request_cbor.cpp  functional_test_request_cors.cpp  functional_test_request_http.cpp  functional_test_request_json.cpp  functional_test_request_xml.cpp  functional_test_upload_download.cpp  main.cpp  qrpc-test.pri  qrpc_test.cpp  qrpc_test.h  qrpc_test_functional.h  qrpc_test_unit.h  unit_test_formatting_util.cpp
